[FIX] FIX ALIGN LEFT AND RIGHT ON PLAYBAR

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,10 @@ li img {
     text-align: right;
 }
 
+.align-left {
+    text-align: left;
+}
+
 .items-center {
     align-items: center;
 }
